--- a/style.css
+++ b/style.css
@@ -5,12 +5,12 @@
 }
 
 main {
-  margin: 50px auto;
   width: 960px;
+  margin: 50px auto;
 }
 
 .item-list {
-  margin-bottom: 50px;
+ margin-bottom: 50px;
 }
 
 .item {
@@ -28,23 +28,31 @@ main {
 }
 
 .box {
-  background-color: #ffd700;
   width: 30%;
   height: 200px;
-  margin-right: 5%;
+  background-color: gold;
   margin-bottom: 40px;
+  margin-right: 5%;
 }
 
 .box:nth-child(3n) {
   margin-right: 0;
 }
 
-.box:nth-first-child,
-.box:nth-child(5),
-.box:nth-last-child {
-  background-color: #ff8c00;
-}
-
 .box:nth-last-child(-n + 3) {
   margin-bottom: 0;
 }
+
+
+.box:nth-child(1) {
+  background-color: #ff8c00;
+}
+
+.box:nth-child(5) {
+  background-color: #ff8c00;
+}
+
+.box:nth-child(9) {
+  background-color: #ff8c00;
+}
+
